// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkSwitch should disable theming if the required attribute is omitted 1`] = `
<RCTSwitch
  accessibilityRole="button"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(7, 112, 227)"
  style={
    Object {
      "height": 31,
      "width": 51,
    }
  }
  tintColor="rgb(221, 221, 229)"
  value={true}
/>
`;

exports[`iOS BpkSwitch should render correctly 1`] = `
<RCTSwitch
  accessibilityRole="button"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(7, 112, 227)"
  style={
    Object {
      "height": 31,
      "width": 51,
    }
  }
  tintColor="rgb(221, 221, 229)"
  value={false}
/>
`;

exports[`iOS BpkSwitch should support the "value" prop 1`] = `
<RCTSwitch
  accessibilityRole="button"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="rgb(7, 112, 227)"
  style={
    Object {
      "height": 31,
      "width": 51,
    }
  }
  tintColor="rgb(221, 221, 229)"
  value={true}
/>
`;

exports[`iOS BpkSwitch should support theming 1`] = `
<RCTSwitch
  accessibilityRole="button"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="red"
  style={
    Object {
      "height": 31,
      "width": 51,
    }
  }
  tintColor="rgb(221, 221, 229)"
  value={true}
/>
`;
